# agent-oncall

./: .gitignore  HCI.md  README.md  README_EN.md  SERVICE_DISCOVERY.md  SKILL.md  idea.md  pyproject.toml  run_complex_demo.py  run_demo.py
proto/: agent_oncall.proto
src/agent_oncall/: __init__.py  alignment.py  cli.py  comm.py  core.py  crypto.py  helpers.py  hitl.py  policy.py  stdin_handler.py
src/agent_oncall/pb/: __init__.py  agent_oncall_pb2.py  agent_oncall_pb2.pyi
tests/: test_agent_oncall.py
