[project]
name = "agent-oncall"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shiyao Zhang", email = "zhangshiyao_ZSY@outlook.com" }
]
requires-python = ">=3.9"
dependencies = [
    "protobuf>=4.21.0",
    "cryptography>=41.0.0",
    "jsonschema>=4.18.0",
]

[dependency-groups]
dev = [
    "grpcio-tools>=1.80.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

